Set max-width of photo to prevent distortion

--- a/src/public/stylesheets/game.css
+++ b/src/public/stylesheets/game.css
@@ -41,8 +41,10 @@ main {
 }
 
 #campus-photo {
+  margin-left: auto;
+  margin-right: auto;
   display: none;
-  width: 100%;
+  max-width: 100%;
   max-height: 500px;
 }
 
